lab9/tests/algo/good/function_call.al
int main(void)
begin

  main();

end