lab9/tests/algo/bad/add_bool_to_int.al

int main(void)
begin
   boolean bool;
   int INTEGER;
   bool + INTEGER;
end